Turned in as-is

--- a/Homework 4/cos451-hw04-ward-spencer/Makefile
+++ b/Homework 4/cos451-hw04-ward-spencer/Makefile
@@ -46,6 +46,7 @@ all:
 	@javadoc -d $(docdir) -linksource $(sourcelist)
     
         # Create a convenient script to run test classes
+    @echo "kotlinc *"
 	@echo "java -cp" $(CLASSPATH) "LexaardInterpreter" > lexaard
 	@chmod +x lexaard
 
